--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
 </head>
 <body>
     <h1>Text Baloons</h1>
+    
     <div id="message-container"></div>
-    <input type="text" id="message-input" placeholder="Type your message and press Enter">
+    
+    <div id="input-wrapper">
+        <input type="text" id="message-input" placeholder="Type your message and press Enter">
+    </div>
+
     <script src="/socket.io/socket.io.js"></script>
     <script src="util.js"></script>
     <script src="script.js"></script>
