--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Text Baloons</title>
+    <title>Text Baloons by Erman</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
