--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Text Baloons</h1>
+    <h1>Text Baloons by Erman</h1>
     
     <div id="message-container"></div>
     
