--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,700&display=swap" rel="stylesheet">
+    <style>
+      h1 {
+        font-family: 'Quicksand', Arial, sans-serif;
+        font-weight: 700;
+        color: #4A4A4A;
+        letter-spacing: 1px;
+        text-shadow: 0 2px 8px #f0f0f0;
+        margin-bottom: 24px;
+      }
+    </style>
     <title>Text Baloons by Erman</title>
     <link rel="stylesheet" href="styles.css">
 </head>
