Change heading text in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Text Baloons by Erman</h1>
+    <h1>Floating Texts that Vanish</h1>
     
     <div id="message-container"></div>
     
